# Linux_Theme

./: .foxml_index.json  .gitignore  AGENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  INVARIANTS.md  KEYBINDS.md  Makefile  README.md  RECOVERY.md  SECURITY.md  TECHDEBT.md  bootstrap.sh  install.sh  mappings.sh  render.sh  setup  setup-minimal  swap.sh  test_hub.sh  test_rofi.sh  test_sub.sh  update.sh  usages.txt
.agent/: settings.local.json
.githooks/: pre-commit
AGENT_DIR/: settings.json
bat/: foxml.tmTheme
btop/: foxml.theme
cursor/: foxml-color-theme.json
distro/: build.sh  packages.x86_64  profiledef.sh
dunst/: dunstrc
fastfetch/: config.jsonc
firefox/: userChrome.css  userContent.css
foxml-cli/: CMakeLists.txt  Makefile  PKGBUILD  ROADMAP.md
foxml-cli/include/: Daemon.hpp  Generator.hpp  Palette.hpp  Platform.hpp  Renderer.hpp  SystemController.hpp  TUI.hpp
foxml-cli/src/: main.cpp
git/: .gitconfig
gtk-3.0/: gtk.css
gtk-4.0/: gtk.css
hyprland/: hypridle.conf  theme.conf
hyprlock/: hyprlock.conf
hyprpaper/: hyprpaper.conf
kitty/: kitty.conf
legacy/: install.sh  mappings.sh
mako/: config
nvim/: NVIM-KEYBINDS.md  init.lua  lazy-lock.json
rofi/: config.rasi  glass.rasi
shared/: foxml-profile.json  greetd_hyprland.conf  greetd_select_monitor.sh  gtk-3.0_settings.ini  gtk-4.0_settings.ini  hyprland.conf  hyprland_hypridle.conf  hyprland_hypridle_ac.conf  hyprland_hypridle_battery.conf  hyprpaper.conf  nvim_NVIM-KEYBINDS.md  nvim_lazy-lock.json  regreet.toml  rofi_config.rasi  throttled.conf  waybar_config  (+6 more)
(+357 files in other folders)
